# silent_treatment

./: README.md  environment.yml  pyproject.toml
src/silent_treatment/: .main.py.swp  __init__.py  __main__.py  config.py  main.py
src/silent_treatment/core/: __init__.py  file_manager.py
src/silent_treatment/core/ui/: __init__.py  cli.py
